FIx opacity on tablet

--- a/style.css
+++ b/style.css
@@ -3131,4 +3131,16 @@ svg {
     img.digital-clock {
         opacity: 1;
     }
+
+    img.fashion {
+        opacity: 1;
+    }
+
+    img.make-up {
+        opacity: 1;
+    }
+
+    img.christmas-pastries {
+        opacity: 1;
+    }
 }
